siduxcc (0.9.20) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 03 Mar 2008 00:03:28 +0100

siduxcc (0.9.19) unstable; urgency=low

  * make sure to distinguish new siduxcc versions from old ones.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Mar 2008 23:59:06 +0100

siduxcc (0.9.18) unstable; urgency=low

  [ Bernard Gray ]
  * make siduxcchermes-candidate.svg the core siduxcchermes icon
  * remove extraneous unused svg icons

  [ Fabian Wuertz ]
  * hermes timer set to 30min 

  [ Stefan Lippers-Hollmann ]
  * regenerate icons from source.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 02 Mar 2008 23:13:28 +0100

siduxcc (0.9.17) unstable; urgency=low

  * kde: kernel: design updated
  * credits: cleary added
  * typo

 -- Fabian Wuertz <xadras@sidux.com>  Thu, 28 Feb 2008 00:25:36 +0100

siduxcc (0.9.16) unstable; urgency=low

  * minimal ja font for kde does not support font used on window title so
    changed to plain english (muchan)

 -- Joaquim Boura <x-un-i@sidux.com>  Tue, 26 Feb 2008 20:34:20 +0100

siduxcc (0.9.15) unstable; urgency=low

  [ Fabian Wuertz ]
  * kde: network: hostname-blank bug fixed
  * kde: kernel: kernel question updated
  * typos

  [ Bernard Gray ]
  * convert siduxcchermes and sidux_book to debian3/4 compat
  * add kde 3/4 compat sidux-blue.svg (there was no source for this)
  * note to xadras: you need to re-export all these updated svgs to png
  * add siduxcchermes icon candidates

  [ Stefan Lippers-Hollmann ]
  * generate PNGs from source.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 26 Feb 2008 15:17:24 +0100

siduxcc (0.9.14) unstable; urgency=low

  [ Fabian Wuertz ]
  * hermes: new icons
  * kernel: get modules function updated
  * hermes: reload button added

  [ Joaquim Boura ]
  * Ja language files updated (thks to muchan)

 -- Joaquim Boura <x-un-i@sidux.com>  Sun, 24 Feb 2008 16:59:29 +0100

siduxcc (0.9.13) unstable; urgency=low

  [ Bernard Gray ]